<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/top"
    android:background="@android:color/background_dark"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:id="@+id/camera"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/frame_style"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/cam"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tethering"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/frame_style"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/tetherReq"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/setting"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/pversion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="45dp"
        android:textColor="@android:color/holo_orange_light"
        android:text="0.0"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/boot_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="170dp"
        android:text="@string/boot"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/boot"
        android:layout_width="260dp"
        android:layout_height="64dp"
        android:layout_alignTop="@+id/boot_title"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="64dp"
        android:background="@drawable/pink_out_line"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/auto"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_widget_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/auto"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/manual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_widget_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/manual"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </RadioGroup>


    <TextView
        android:id="@+id/activate_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="330dp"
        android:text="@string/activate"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/activate"
        android:layout_width="260dp"
        android:layout_height="64dp"
        android:layout_alignTop="@+id/activate_title"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="64dp"
        android:background="@drawable/pink_out_line"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/enable"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_widget_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/enable"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/disable"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_widget_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/disable"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </RadioGroup>

    <Button
        android:id="@+id/wallpaper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="29dp"
        android:text="@string/wallpaper" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_alignBottom="@+id/wallpaper"
        android:text="@string/clear" />
</RelativeLayout>
