<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="5dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:paddingRight="5dp"
    android:background="@drawable/list_background_selector">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="28sp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text= "@string/bcell"
            android:textColor="@android:color/holo_orange_light"
            android:id="@+id/device_type"
            android:textSize="18sp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dummyaddr"
            android:id="@+id/device_ip"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="18sp"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="28sp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/dummydev"
            android:id="@+id/device_name"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dummyaddr"
            android:id="@+id/device_bcast"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:layout_weight="2" />

    </LinearLayout>


</LinearLayout>